DeviceTypeMetricsAPIchart/templates/DeviceTypeMetricsAPIingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: device-type-metrics-api
spec:
  rules:
  - http:
      paths:
      - path: /Log/auth
        pathType: Prefix
        backend:
          service:
            name: device-type-metrics-api
            port:
              number: 8000
      - path: /Log/auth/statistics
        pathType: Prefix
        backend:
          service:
            name: device-type-metrics-api
            port:
              number: 8000
